<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label1" />

    <EditText
        android:id="@+id/mat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Saisir matricule"
        android:inputType="number" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label2" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:inputType="textPersonName"
        android:hint="Saisir nom" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label3" />

    <EditText
        android:id="@+id/sal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="Saisir salaire" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/btnInsert"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:text="@string/btnSearch" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:enabled="false"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:text="@string/btnDelete" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:enabled="false"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnListSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:text="List salaries" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:enabled="false"
        android:text="@string/btnLog" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/logoutFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"/>

</LinearLayout>